Fix scrollbar size

--- a/styles/variables.less
+++ b/styles/variables.less
@@ -576,6 +576,7 @@
 @sand-scroll-overscroll-thickness: 12px;
 @sand-scroll-overscroll-duration: 300ms;
 @sand-scroll-scrollbar-size: @sand-button-small-height;
+@sand-scroll-fadeout-size: 48px;
 
 // SelectableItem
 // ---------------------------------------
